--- a/vadginger-alpha/app/views/Activities/_form.html
+++ b/vadginger-alpha/app/views/Activities/_form.html
@@ -48,7 +48,7 @@
   <div class="label">Op welke dag vond de activiteit plaats?</div>
   <div class="field">
 
-      <input type="text" name="activity_date" value="${entity?.activityDate} id="datepicker"/>
+      <input type="text" name="activity_date" value="${entity?.activityDate}" id="datepicker"/>
       <script>
       $( "#datepicker" ).datepicker({ appendText: '(yyyy-mm-dd)' });
   </script>
