--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -1,59 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>#{get 'title' /}</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/default.css'}">
-        <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
-        <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/jquery-ui-1.8.2.custom.css'}">
-        #{get 'moreStyles' /}
-        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-        <script src="@{'/public/javascripts/jquery-1.4.2.min.js'}" type="text/javascript" charset="utf-8"></script>
-        <script src="@{'/public/javascripts/jquery-ui-1.8.2.custom.min.js'}" type="text/javascript" charset="utf-8"></script>
-        #{get 'moreScripts' /}
-    </head>
-    <body>
-		<div id="header"> 
-		     <a class="title" href="@{Application.index}">VAD Ginger .be</a>
-		</div>
-		<div id="content-container">
-      <div id="menu">
-                <span style="float:right;">
-          #{if session.get("username") == null}
-          <a href="/secure/login">Login</a>
+<head>
+  <title>#{get 'title' /}</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <!--link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/default.css'}"-->
+  <link rel="stylesheet" type="text/css"
+        href="http://yui.yahooapis.com/2.9.0/build/reset-fonts-grids/reset-fonts-grids.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/jquery-ui-1.8.16.custom.css'}">
+  <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
+  #{get 'moreStyles' /}
+  <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+  <script src="@{'/public/javascripts/jquery-1.6.2.min.js'}" type="text/javascript" charset="utf-8"></script>
+  <script src="@{'/public/javascripts/jquery-ui-1.8.16.custom.min.js'}" type="text/javascript" charset="utf-8"></script>
+  <script src="@{'/public/javascripts/main.js'}" type="text/javascript" charset="utf-8"></script>
+  #{get 'moreScripts' /}
+</head>
+<body class="yui-skin-sam">
+<div id="doc3" class="yui-t2">
+  <div id="hd" role="banner">
+    <h1>VAD Ginger .be</h1>
+    <div id="menu">
+      <span style="float:right;">
+        #{if session.get("username") == null}
+        <a href="/secure/login">Login</a>
+        #{/if}
+        #{else}
+        <a href="/secure/logout">Logout</a>
+        #{/else}
+      </span>
+    </div>
+  </div>
+  <div id="bd" role="main">
+    <div id="yui-main">
+      <div class="yui-b">
+        <div class="yui-g ui-corner-all ui-widget-content vad-main-block">
+          #{if flash.error}
+          <div class="fError">
+            <strong>${play.i18n.Messages.get(flash.error)}</strong>
+          </div>
           #{/if}
-          #{else}
-          <a href="/secure/logout">Logout</a>
-          #{/else}
-        </span>
-              </div>
-			<div id="content">
-		        #{if flash.error}
-		            <div class="fError">
-		                <strong>${play.i18n.Messages.get(flash.error)}</strong>
-		            </div>
-		        #{/if}
-		        #{if flash.success}
-		            <div class="fSuccess">
-		                <strong>${play.i18n.Messages.get(flash.success)}</strong>
-		            </div>
-		        #{/if}
-				
-		        #{doLayout /}
-		    </div>
-		</div>
-		<div id="footer">
-			<script type="text/javascript"> 
-			var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-			document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-			</script>
-			<script type="text/javascript">
-			//TODO: add Google Analytics tracking ID and uncomment
-			//try {
-			//var pageTracker = _gat._getTracker("YOUR_TRACKING_ID");
-			//pageTracker._trackPageview();
-			//} catch(err) {}
-			</script>
-		</div>
-    </body>
+          #{if flash.success}
+          <div class="fSuccess">
+            <strong>${play.i18n.Messages.get(flash.success)}</strong>
+          </div>
+          #{/if}
+
+          #{doLayout /}
+        </div>
+      </div>
+    </div>
+    <div class="yui-b">
+      <!-- YOUR NAVIGATION GOES HERE -->
+      <div id="accordion">
+          <h3><a href="#">Meer Info</a></h3>
+          <div>First content</div>
+          <h3><a href="#">Gebruikers</a></h3>
+          <div>First content</div>
+          <h3><a href="#">Activiteiten</a></h3>
+          <div>Second content</div>
+          <h3><a href="#">Organisaties</a></h3>
+          <div>Second content</div>
+          <h3><a href="#">Tips voor Gebruikers</a></h3>
+          <div>Second content</div>
+          <h3><a href="#">Wachtwoord vergeten?</a></h3>
+          <div>Second content</div>
+          <h3><a href="#">Handleiding in Word</a></h3>
+          <div>Second content</div>
+      </div>
+    </div>
+
+  </div>
+  <div id="ft" role="contentinfo"><p>&copy; Copyright VAD 2011. All Rights Reserved.</p></div>
+</div>
+</body>
 </html>
