fix: search form link

--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -60,7 +60,7 @@
           <h3><a href="#">Activiteiten</a></h3>
           <div><ul>
             <li><a href="@{Activities.index()}">Toon Activiteiten</a></li>
-            <li><a href="@{Activities.search()}">Filter Activiteiten</a></li>
+            <li><a href="@{Activities.searchForm()}">Filter Activiteiten</a></li>
             <li><a href="@{Activities.create()}">Nieuwe Activiteit</a></li>
           </ul></div>
           <h3><a href="#">Organisaties</a></h3>
