--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -18,7 +18,7 @@
 <body class="yui-skin-sam">
 <div id="doc3" class="yui-t3">
   <div id="hd" role="banner">
-    <h1>VAD Ginger .be</h1>
+    <h1><a href="/">VAD Ginger .be</a></h1>
   </div>
   <div id="bd" role="main">
     <div id="yui-main">
@@ -41,11 +41,16 @@
     </div>
     <div class="yui-b">
       <!-- YOUR NAVIGATION GOES HERE -->
+      <div id="before-accordion" class="ui-accordion ui-widget ui-helper-reset ui-accordion-icons">
+        <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
+          <a href="@{Statics.moreInfo()}">Meer info</a>
+        </h3>
+      </div>
       <div id="accordion">
-          <h3><a href="#">Meer Info</a></h3>
-          <div>First content</div>
           <h3><a href="#">Gebruiker(s)</a></h3>
           <div><ul>
+            <li><a href="@{Statics.usersStart()}">Startpagina</a></li>
+            <li><a href="@{Statics.usersData()}">Gebruikersgegevens</a></li>
             <li><a href="@{VadGingerUsers.index()}">Toon Gebruikers</a></li>
             <li><a href="@{VadGingerUsers.create()}">Nieuwe Gebruiker</a></li>
             <li>
@@ -59,17 +64,21 @@
           </ul></div>
           <h3><a href="#">Activiteiten</a></h3>
           <div><ul>
-            <li><a href="@{Activities.index()}">Toon Activiteiten</a></li>
+            <li><a href="@{Statics.activitiesStart()}">Startpagina</a></li>
+            <li><a href="@{Activities.index()}">Mijn Activiteiten</a></li>
             <li><a href="@{Activities.searchForm()}">Filter Activiteiten</a></li>
             <li><a href="@{Activities.create()}">Nieuwe Activiteit</a></li>
           </ul></div>
           <h3><a href="#">Organisaties</a></h3>
           <div><ul>
-            <li><a href="@{Organisatiess.index()}">Toon Organisaties</a></li>
-            <li><a href="@{Organisatiess.create()}">Nieuwe Organisatie</a></li>
+            <li><a href="@{Statics.organisationsStart()}">Startpagina</a></li>
+            <li><a href="@{Organisatiess.index()}">Lijst organisaties</a></li>
+            <li><a href="@{Organisatiess.index()}">Lijst sub-organisaties</a></li>
+            <li><a href="@{Organisatiess.index()}">Lijst regionale clusters</a></li>
           </ul></div>
           <h3><a href="#">Administratie</a></h3>
           <div><ul>
+            <li>Organisaties (<a href="@{Organisatiess.index()}">Lijst</a> / <a href="@{Organisatiess.create()}">Nieuw</a>)</li>
             <li>Activiteit types (<a href="@{ActivityTypes.index()}">Lijst</a> / <a href="@{ActivityTypes.create()}">Nieuw</a>)</li>
             <li>Sectoren (<a href="@{ActivitySectorss.index()}">Lijst</a> / <a href="@{ActivitySectorss.create()}">Nieuw</a>)</li>
             <li>Doelgroepen (<a href="@{ActivityTargetss.index()}">Lijst</a> / <a href="@{ActivityTargetss.create()}">Nieuw</a>)</li>
@@ -82,12 +91,17 @@
             <li>Materialen (<a href="@{Materialss.index()}">Lijst</a> / <a href="@{Materialss.create()}">Nieuw</a>)</li>
             <li></li>
           </ul></div>
-          <h3><a href="#">Tips voor Gebruikers</a></h3>
-          <div>Second content</div>
-          <h3><a href="#">Wachtwoord vergeten?</a></h3>
-          <div>Second content</div>
-          <h3><a href="#">Handleiding in Word</a></h3>
-          <div>Second content</div>
+      </div>
+      <div id="after-accordion" class="ui-accordion ui-widget ui-helper-reset ui-accordion-icons">
+        <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
+          <a href="@{Statics.tips()}">Tips voor Gebruikers</a>
+        </h3>
+        <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
+          <a href="#">Wachtwoord vergeten?</a>
+        </h3>
+        <h3 class="ui-accordion-header ui-helper-reset ui-state-default ui-corner-all" role="tab" aria-expanded="false" aria-selected="false" tabindex="-1">
+          <a href="#">Handleiding in Word</a>
+        </h3>
       </div>
     </div>
 
