--- a/vadginger-alpha/app/views/Organisatiess/index.html
+++ b/vadginger-alpha/app/views/Organisatiess/index.html
@@ -1,101 +1,31 @@
 #{extends 'main.html' /}
 
-<h2>Organisatiess</h2>
+<h2>Organisaties</h2>
 
-<table class="entity Organisaties">
+<table id="mytable" class="entity Organisaties">
 	<thead>
 		<tr>
-			<th><!-- actions --></th>
-			
-	        
-				<th>User Id</th>
-	        
-			
-	        
-				<th>Ouder</th>
-	        
-			
-	        
 				<th>Naam</th>
-	        
-			
-	        
 				<th>Organisatie Netwerk</th>
-	        
-			
-	        
 				<th>Adres</th>
-	        
-			
-	        
-				<th>Postcode</th>
-	        
-			
-	        
-				<th>Gemeente</th>
-	        
-			
-	        
-				<th>Land</th>
-	        
-			
-	        
 				<th>Centrum</th>
-	        
-			
-	        
-				<th>Id</th>
-	        
-			
+			  <th><!-- actions --></th>
 		</tr>
 	</thead>
 	<tbody>
 	#{list items:entities, as:'entity'}
 		<tr>
-			<td>
-				<a href="@{Organisatiess.show(entity.id)}">Show</a>&nbsp;
-				<a href="@{Organisatiess.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{Organisatiess.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
-			</td>
-			
-        
-					<td>${entity.userId}</td>
-        
-			
-        
-					<td>${entity.ouder}</td>
-        
-			
-        
 					<td>${entity.naam}</td>
-        
-			
-        
 					<td>${entity.organisatieNetwerk}</td>
-        
-			
-        
-					<td>${entity.adres}</td>
-        
-			
-        
-					<td>${entity.postcode}</td>
-        
-			
-        
-					<td>${entity.gemeente}</td>
-        
-			
-        
-					<td>${entity.land}</td>
-        
-			
-        
+					<td>${entity.adres}, ${entity.postcode}&nbsp;${entity.gemeente}</td>
 					<td>${entity.centrum}</td>
-        
-			
-        
-					<td>${entity.id}</td>
+          <td>
+            <table class="actiontable"><tr>
+              <td><a href="@{Organisatiess.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{Organisatiess.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{Organisatiess.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+            </tr></table>
+          </td>
         
 			
 		</tr>
