--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -10,6 +10,12 @@
   <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
   #{get 'moreStyles' /}
   <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+  <script>
+    ginger = {};
+    #{if accordionTab}
+      ginger.accordionTab = ${accordionTab};
+    #{/if}
+  </script>
   <script src="@{'/public/javascripts/jquery-1.6.2.min.js'}" type="text/javascript" charset="utf-8"></script>
   <script src="@{'/public/javascripts/jquery-ui-1.8.16.custom.min.js'}" type="text/javascript" charset="utf-8"></script>
   <script src="@{'/public/javascripts/main.js'}" type="text/javascript" charset="utf-8"></script>
