--- a/vadginger-alpha/app/views/ActivityEvaluvatorss/index.html
+++ b/vadginger-alpha/app/views/ActivityEvaluvatorss/index.html
@@ -1,58 +1,32 @@
 #{extends 'main.html' /}
 
-<h2>ActivityEvaluvatorss</h2>
+<h2>Evaluatoren</h2>
 
-<table class="entity ActivityEvaluvators">
+<table id="mytable" class="entity ActivityEvaluvators">
 	<thead>
 		<tr>
-			<th><!-- actions --></th>
-			
-	        
 				<th>Activity Id</th>
-	        
-			
-	        
 				<th>Eval Type Id</th>
-	        
-			
-	        
 				<th>Evaluvators Id</th>
-	        
-			
-	        
-				<th>Id</th>
-	        
-			
+			  <th><!-- actions --></th>
 		</tr>
 	</thead>
 	<tbody>
 	#{list items:entities, as:'entity'}
 		<tr>
-			<td>
-				<a href="@{ActivityEvaluvatorss.show(entity.id)}">Show</a>&nbsp;
-				<a href="@{ActivityEvaluvatorss.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{ActivityEvaluvatorss.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
-			</td>
-			
-        
 					<td>${entity.activityId}</td>
-        
-			
-        
 					<td>${entity.evalTypeId}</td>
-        
-			
-        
 					<td>${entity.evaluvatorsId}</td>
-        
-			
-        
-					<td>${entity.id}</td>
+          <td>
+            <table class="actiontable"><tr>
+              <td><a href="@{ActivityEvaluvatorss.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{ActivityEvaluvatorss.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{ActivityEvaluvatorss.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+            </tr></table>
+          </td>
         
 			
 		</tr>
 	#{/list}
 	</tbody>
 </table>
-
-<a href="@{ActivityEvaluvatorss.create}">Create</a>
