--- a/vadginger-alpha/app/views/ActivityTargetss/index.html
+++ b/vadginger-alpha/app/views/ActivityTargetss/index.html
@@ -1,22 +1,15 @@
 #{extends 'main.html' /}
 
-<h2>ActivityTargetss</h2>
+<h2>Doelgroepen</h2>
 
-<table class="entity ActivityTargets">
+<table id="mytable" class="entity ActivityTargets">
 	<thead>
 		<tr>
-			<th><!-- actions --></th>
 			
 	        
 				<th>Activity Id</th>
-	        
-			
-	        
 				<th>Attendant Type Id</th>
-	        
-			
-	        
-				<th>Id</th>
+			  <th><!-- actions --></th>
 	        
 			
 		</tr>
@@ -24,22 +17,15 @@
 	<tbody>
 	#{list items:entities, as:'entity'}
 		<tr>
-			<td>
-				<a href="@{ActivityTargetss.show(entity.id)}">Show</a>&nbsp;
-				<a href="@{ActivityTargetss.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{ActivityTargetss.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
-			</td>
-			
-        
 					<td>${entity.activityId}</td>
-        
-			
-        
 					<td>${entity.attendantTypeId}</td>
-        
-			
-        
-					<td>${entity.id}</td>
+          <td>
+            <table class="actiontable"><tr>
+              <td><a href="@{ActivityTargetss.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{ActivityTargetss.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{ActivityTargetss.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+            </tr></table>
+          </td>
         
 			
 		</tr>
@@ -47,4 +33,3 @@
 	</tbody>
 </table>
 
-<a href="@{ActivityTargetss.create}">Create</a>
