--- a/vadginger-alpha/app/views/ActivityTypes/index.html
+++ b/vadginger-alpha/app/views/ActivityTypes/index.html
@@ -1,53 +1,29 @@
 #{extends 'main.html' /}
 
-<h2>ActivityTypes</h2>
+<h2>Activiteiten</h2>
 
-<table class="entity ActivityType">
+<table id="mytable" class="entity ActivityType">
 	<thead>
 		<tr>
-			<th><!-- actions --></th>
-			
-	        
-				<th>Ouder</th>
-	        
-			
-	        
 				<th>Naam</th>
-	        
-			
-	        
 				<th>Beschrijving</th>
-	        
-			
-	        
-				<th>Id</th>
-	        
-			
+				<th>Hoort bij</th>
+			  <th><!-- actions --></th>
 		</tr>
 	</thead>
 	<tbody>
 	#{list items:entities, as:'entity'}
 		<tr>
-			<td>
-				<a href="@{ActivityTypes.show(entity.id)}">Show</a>&nbsp;
-				<a href="@{ActivityTypes.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{ActivityTypes.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
-			</td>
-			
-        
-					<td>${entity.ouder}</td>
-        
-			
-        
 					<td>${entity.naam}</td>
-        
-			
-        
 					<td>${entity.beschrijving}</td>
-        
-			
-        
-					<td>${entity.id}</td>
+					<td>${entity.ouder?.naam}</td>
+          <td>
+            <table class="actiontable"><tr>
+              <td><a href="@{ActivityTypes.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{ActivityTypes.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{ActivityTypes.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+            </tr></table>
+          </td>
         
 			
 		</tr>
@@ -55,4 +31,3 @@
 	</tbody>
 </table>
 
-<a href="@{ActivityTypes.create}">Create</a>
