--- a/vadginger-alpha/app/views/Itemss/index.html
+++ b/vadginger-alpha/app/views/Itemss/index.html
@@ -1,50 +1,28 @@
 #{extends 'main.html' /}
 
-<h2>Itemss</h2>
+<h2>Items</h2>
 
-<table class="entity Items">
+<table id="mytable" class="entity Items">
 	<thead>
 		<tr>
-			<th><!-- actions --></th>
-			
-	        
 				<th>Naam</th>
-	        
-			
-	        
 				<th>Beschrijving</th>
-	        
-			
-	        
-				<th>Id</th>
-	        
-			
+			  <th><!-- actions --></th>
 		</tr>
 	</thead>
 	<tbody>
 	#{list items:entities, as:'entity'}
 		<tr>
-			<td>
-				<a href="@{Itemss.show(entity.id)}">Show</a>&nbsp;
-				<a href="@{Itemss.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{Itemss.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
-			</td>
-			
-        
 					<td>${entity.naam}</td>
-        
-			
-        
 					<td>${entity.beschrijving}</td>
-        
-			
-        
-					<td>${entity.id}</td>
-        
-			
+          <td>
+            <table class="actiontable"><tr>
+              <td><a href="@{Itemss.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{Itemss.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{Itemss.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+            </tr></table>
+          </td>
 		</tr>
 	#{/list}
 	</tbody>
 </table>
-
-<a href="@{Itemss.create}">Create</a>
