--- a/vadginger-alpha/app/views/Sectorss/index.html
+++ b/vadginger-alpha/app/views/Sectorss/index.html
@@ -1,58 +1,31 @@
 #{extends 'main.html' /}
 
-<h2>Sectorss</h2>
+<h2>Sectoren</h2>
 
-<table class="entity Sectors">
+<table id="mytable" class="entity Sectors">
 	<thead>
 		<tr>
-			<th><!-- actions --></th>
-			
-	        
-				<th>Ouder</th>
-	        
-			
-	        
 				<th>Naam</th>
-	        
-			
-	        
 				<th>Beschrijving</th>
-	        
-			
-	        
-				<th>Id</th>
-	        
-			
+				<th>Hoort bij</th>
+			  <th><!-- actions --></th>
 		</tr>
 	</thead>
 	<tbody>
 	#{list items:entities, as:'entity'}
 		<tr>
-			<td>
-				<a href="@{Sectorss.show(entity.id)}">Show</a>&nbsp;
-				<a href="@{Sectorss.edit(entity.id)}">Edit</a>&nbsp;
-				<a href="@{Sectorss.delete(entity.id)}" onclick="if (!confirm('Are you sure you want to delete this record?')) return false;">Delete</a>
-			</td>
-			
-        
-					<td>${entity.ouder}</td>
-        
-			
-        
 					<td>${entity.naam}</td>
-        
-			
-        
 					<td>${entity.beschrijving}</td>
-        
-			
-        
-					<td>${entity.id}</td>
-        
-			
+					<td>${entity.ouder}</td>
+          <td>
+            <table class="actiontable"><tr>
+              <td><a href="@{Sectorss.show(entity.id)}"><div class="viewer actionbutton"></div></a></td>
+              <td><a href="@{Sectorss.edit(entity.id)}"><div class="editor actionbutton"></div></a></td>
+              <td><a href="@{Sectorss.delete(entity.id)}" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+            </tr></table>
+          </td>
 		</tr>
 	#{/list}
 	</tbody>
 </table>
 
-<a href="@{Sectorss.create}">Create</a>
