--- a/vadginger-alpha/app/views/Activities/index.html
+++ b/vadginger-alpha/app/views/Activities/index.html
@@ -46,7 +46,9 @@
 		</tr>
 	</thead>
 	<tbody>
-	#{list items:entities, as:'entity'}
+	#{paginate.list items:entities, as:'entity'}
+	
+	
 		<tr>
 			<td>
 				<a href="@{Activities.show(entity.id)}">Show</a>&nbsp;
@@ -91,8 +93,11 @@
         
 			
 		</tr>
-	#{/list}
+		
+	#{/paginate.list}
+	
+		
 	</tbody>
 </table>
-
+#{paginate.controls items:entities /} 
 <a href="@{Activities.create}">Create</a>
