--- a/vadginger-alpha/app/views/Sectorss/index.html
+++ b/vadginger-alpha/app/views/Sectorss/index.html
@@ -26,7 +26,7 @@
 		</tr>
 	</thead>
 	<tbody>
-	#{list items:entities, as:'entity'}
+	#{paginate.list items:entities, as:'entity'}
 		<tr>
 			<td>
 				<a href="@{Sectorss.show(entity.id)}">Show</a>&nbsp;
@@ -51,8 +51,8 @@
         
 			
 		</tr>
-	#{/list}
+	#{/paginate.list}
 	</tbody>
 </table>
-
+#{paginate.controls items:entities /} 
 <a href="@{Sectorss.create}">Create</a>
