--- a/vadginger-alpha/app/views/Organisatiess/_form.html
+++ b/vadginger-alpha/app/views/Organisatiess/_form.html
@@ -37,7 +37,7 @@
 
 
  <div class="row">
-  <div class="label">Hoort bij</div>
+  <div class="label">Afhankelijk van</div>
   <div class="field">
     
     
