--- a/vadginger-alpha/app/views/ActivityTypes/_form.html
+++ b/vadginger-alpha/app/views/ActivityTypes/_form.html
@@ -1,6 +1,6 @@
 
  <div class="row">
-  <div class="label">Hoort bij</div>
+  <div class="label">Afhankelijk van</div>
   <div class="field">
     
     
