--- a/vadginger-alpha/app/views/Locationss/index.html
+++ b/vadginger-alpha/app/views/Locationss/index.html
@@ -7,7 +7,7 @@
 		<tr>
 				<th>Naam</th>
 				<th>Beschrijving</th>
-				<th>Hoort bij</th>
+				<th>Afhankelijk van</th>
 				<th>Is Cluster</th>
 			<th><!-- actions --></th>
 		</tr>
