--- a/vadginger-alpha/app/views/Locationss/show.html
+++ b/vadginger-alpha/app/views/Locationss/show.html
@@ -7,7 +7,7 @@
   
 	<div class="row">
 		<span class="elem">
-			ouder:
+			Afhankelijk van:
 		</span>
 		<span class="value">
       ${entity.ouder}
