--- a/vadginger-alpha/app/views/Sectorss/index.html
+++ b/vadginger-alpha/app/views/Sectorss/index.html
@@ -7,7 +7,7 @@
 		<tr>
 				<th>Naam</th>
 				<th>Beschrijving</th>
-				<th>Hoort bij</th>
+				<th>Afhankelijk van</th>
 			  <th><!-- actions --></th>
 		</tr>
 	</thead>
